Fixed issues with startup projects.
Ignoring compiled CSS.

--- a/Creative.Web/Creative.Web.csproj
+++ b/Creative.Web/Creative.Web.csproj
@@ -300,7 +300,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>2265</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://creative.devlocal.highway.com.au</IISUrl>
+          <IISUrl>http://localhost:9503</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
