--- a/Identity.Web/Identity.Web.csproj
+++ b/Identity.Web/Identity.Web.csproj
@@ -401,9 +401,9 @@
         <WebProjectProperties>
           <UseIIS>True</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>2265</DevelopmentServerPort>
+          <DevelopmentServerPort>9502</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:9502/</IISUrl>
+          <IISUrl>http://localhost:9502</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
