--- a/F1PCO.Web/Web.config
+++ b/F1PCO.Web/Web.config
@@ -14,6 +14,11 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="F1.ChurchCode" value="hwychrau" />
+    <add key="F1.ApiBaseUrlFormat" value="https://{churchcode}.staging.fellowshiponeapi.com" />
+    <add key="F1.PortalUserAuthorizeUrlFormat" value="https://{churchcode}.staging.fellowshiponeapi.com/v1/PortalUser/Login?oauth_token={oauth_token}&amp;oauth_callback={oauth_callback}" />
+    <add key="F1.ConsumerKey" value="429" />
+    <add key="F1.ConsumerSecret" value="cc0f53b6-8057-4800-94e1-5fafe00b5509" />
   </appSettings>
   <connectionStrings>
     <add name="RavenDB" connectionString="Url=http://ravendb.devlocal.highway.com.au" />
