--- a/Shared/Shared.csproj
+++ b/Shared/Shared.csproj
@@ -52,6 +52,7 @@
       <HintPath>..\packages\Newtonsoft.Json.4.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq" />
@@ -65,6 +66,7 @@
     <Compile Include="Diagnostics\Log4Net\Log4NetLog.cs" />
     <Compile Include="Exceptions\ExceptionExtensions.cs" />
     <Compile Include="Guard.cs" />
+    <Compile Include="Autofac\ConfiguredModule.cs" />
     <Compile Include="Persistence\ITransactionContext.cs" />
     <Compile Include="Persistence\NoTransactionAttribute.cs" />
     <Compile Include="Persistence\TransactionScopeTransactionContext.cs" />
