--- a/F1PCO.Web/F1PCO.Web.csproj
+++ b/F1PCO.Web/F1PCO.Web.csproj
@@ -192,7 +192,10 @@
     <Compile Include="Integration\F1\IF1ClientProvider.cs" />
     <Compile Include="Integration\F1\IF1PersonRepository.cs" />
     <Compile Include="Integration\F1\Token.cs" />
+    <Compile Include="Models\F1Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\Person\IndexViewModel.cs" />
+    <Compile Include="ViewModels\Person\PersonMergeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="404.html" />
@@ -252,7 +255,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="cachedassets\" />
     <Folder Include="js\mylibs\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -313,6 +315,7 @@
     <None Include="bootstrap\LICENSE" />
     <Content Include="Views\Shared\_LogOnPartial.cshtml" />
     <Content Include="Views\Person\Index.cshtml" />
+    <Content Include="Views\Person\ExistingPeople.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
