- started adding PCO auth
- refactored F1Authorization service a little to limit abstraction leaks.

--- a/F1PCO.Web/Web.config
+++ b/F1PCO.Web/Web.config
@@ -16,9 +16,11 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="F1.ChurchCode" value="hwychrau" />
     <add key="F1.ApiBaseUrlFormat" value="https://{churchcode}.staging.fellowshiponeapi.com" />
-    <add key="F1.PortalUserAuthorizeUrlFormat" value="https://{churchcode}.staging.fellowshiponeapi.com/v1/PortalUser/Login?oauth_token={oauth_token}&amp;oauth_callback={oauth_callback}" />
     <add key="F1.ConsumerKey" value="429" />
     <add key="F1.ConsumerSecret" value="cc0f53b6-8057-4800-94e1-5fafe00b5509" />
+    <add key="PCO.ApiBaseUrlFormat" value="https://www.planningcenteronline.com" />
+    <add key="PCO.ConsumerKey" value="mwYAsURFuUngZ79hkXjt" />
+    <add key="PCO.ConsumerSecret" value="vKStLUqJLgOORBfyrGbxTtciFavx0oqJ6aj3kjT0" />
   </appSettings>
   <connectionStrings>
     <add name="RavenDB" connectionString="Url=http://ravendb.devlocal.highway.com.au" />
