--- a/F1PCO.Web/F1PCO.Web.csproj
+++ b/F1PCO.Web/F1PCO.Web.csproj
@@ -192,8 +192,9 @@
     <Compile Include="Integration\F1\IF1AuthorizationService.cs" />
     <Compile Include="Integration\F1\IF1ClientProvider.cs" />
     <Compile Include="Integration\F1\IF1PersonRepository.cs" />
-    <Compile Include="Integration\F1\Token.cs" />
+    <Compile Include="Integration\Token.cs" />
     <Compile Include="Models\F1Person.cs" />
+    <Compile Include="Models\PersistedF1Token.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Person\IndexViewModel.cs" />
     <Compile Include="ViewModels\Person\PersonMergeViewModel.cs" />
