--- a/F1PCO.Web/Web.config
+++ b/F1PCO.Web/Web.config
@@ -18,7 +18,7 @@
     <add key="F1.ApiBaseUrlFormat" value="https://{churchcode}.staging.fellowshiponeapi.com" />
     <add key="F1.ConsumerKey" value="429" />
     <add key="F1.ConsumerSecret" value="cc0f53b6-8057-4800-94e1-5fafe00b5509" />
-    <add key="PCO.ApiBaseUrlFormat" value="https://www.planningcenteronline.com" />
+    <add key="PCO.ApiBaseUrl" value="https://www.planningcenteronline.com" />
     <add key="PCO.ConsumerKey" value="mwYAsURFuUngZ79hkXjt" />
     <add key="PCO.ConsumerSecret" value="vKStLUqJLgOORBfyrGbxTtciFavx0oqJ6aj3kjT0" />
   </appSettings>
