--- a/F1PCO.Web/F1PCO.Web.csproj
+++ b/F1PCO.Web/F1PCO.Web.csproj
@@ -206,6 +206,7 @@
     <Compile Include="Models\PersistedF1Token.cs" />
     <Compile Include="Models\PersistedPCOToken.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\F1People\SearchByNameViewModel.cs" />
     <Compile Include="ViewModels\PCOPeople\IndexViewModel.cs" />
     <Compile Include="ViewModels\PCOPeople\PersonMergeViewModel.cs" />
     <Compile Include="ViewModels\F1People\IndexViewModel.cs" />
@@ -332,6 +333,7 @@
     <Content Include="Views\PCOPeople\ExistingPeople.cshtml" />
     <Content Include="Views\PCOPeople\Index.cshtml" />
     <Content Include="Views\Home\Ready.cshtml" />
+    <Content Include="Views\F1People\SearchByName.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
