--- a/F1PCO.Web/F1PCO.Web.csproj
+++ b/F1PCO.Web/F1PCO.Web.csproj
@@ -189,22 +189,17 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Integration\F1\F1AuthorizationService.cs" />
+    <Compile Include="Integration\F1\IF1AuthorizationService.cs" />
     <Compile Include="Integration\F1\F1ClientProvider.cs" />
     <Compile Include="Integration\F1\F1PersonRepository.cs" />
-    <Compile Include="Integration\F1\IF1AuthorizationService.cs" />
     <Compile Include="Integration\F1\IF1ClientProvider.cs" />
     <Compile Include="Integration\F1\IF1PersonRepository.cs" />
-    <Compile Include="Integration\PCO\PCOAuthorizationService.cs" />
-    <Compile Include="Integration\PCO\PCOClientProvider.cs" />
-    <Compile Include="Integration\PCO\PCOPersonRepository.cs" />
     <Compile Include="Integration\PCO\IPCOAuthorizationService.cs" />
     <Compile Include="Integration\PCO\IPCOClientProvider.cs" />
     <Compile Include="Integration\PCO\IPCOPersonRepository.cs" />
-    <Compile Include="Integration\Token.cs" />
-    <Compile Include="Models\F1Person.cs" />
-    <Compile Include="Models\PCOPerson.cs" />
-    <Compile Include="Models\PersistedF1Token.cs" />
-    <Compile Include="Models\PersistedPCOToken.cs" />
+    <Compile Include="Integration\PCO\PCOAuthorizationService.cs" />
+    <Compile Include="Integration\PCO\PCOClientProvider.cs" />
+    <Compile Include="Integration\PCO\PCOPersonRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\F1People\SearchByNameViewModel.cs" />
     <Compile Include="ViewModels\PCOPeople\IndexViewModel.cs" />
@@ -271,11 +266,16 @@
     <Folder Include="App_Data\" />
     <Folder Include="cachedassets\" />
     <Folder Include="js\mylibs\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\F1PCO\F1PCO.csproj">
+      <Project>{29a4ee3b-58a8-48f5-a8ff-9e6a938acad7}</Project>
+      <Name>F1PCO</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Shared.Mvc\Shared.Mvc.csproj">
       <Project>{7b0241c0-4849-43e2-aa56-b649095f004f}</Project>
       <Name>Shared.Mvc</Name>
