--- a/F1PCO/F1PCO.csproj
+++ b/F1PCO/F1PCO.csproj
@@ -35,10 +35,21 @@
     <Reference Include="Hammock">
       <HintPath>..\packages\Hammock.1.3.0\lib\net40\Hammock.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\packages\Newtonsoft.Json.4.5.5\lib\net40\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=4.0.8.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.4.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="Raven.Abstractions">
+      <HintPath>..\packages\RavenDB.Client.1.0.888\lib\net40\Raven.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Raven.Client.Lightweight">
+      <HintPath>..\packages\RavenDB.Client.1.0.888\lib\net40\Raven.Client.Lightweight.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Core" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -49,6 +60,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="F1Person.cs" />
+    <Compile Include="Integration\F1\F1AuthorizationService.cs" />
+    <Compile Include="Integration\F1\F1ClientProvider.cs" />
+    <Compile Include="Integration\F1\F1PersonRepository.cs" />
+    <Compile Include="Integration\F1\IF1AuthorizationService.cs" />
+    <Compile Include="Integration\F1\IF1ClientProvider.cs" />
+    <Compile Include="Integration\F1\IF1PersonRepository.cs" />
+    <Compile Include="Integration\PCO\IPCOAuthorizationService.cs" />
+    <Compile Include="Integration\PCO\IPCOClientProvider.cs" />
+    <Compile Include="Integration\PCO\IPCOPersonRepository.cs" />
+    <Compile Include="Integration\PCO\PCOAuthorizationService.cs" />
+    <Compile Include="Integration\PCO\PCOClientProvider.cs" />
+    <Compile Include="Integration\PCO\PCOPersonRepository.cs" />
     <Compile Include="OAuth\AccessToken.cs" />
     <Compile Include="OAuth\RequestToken.cs" />
     <Compile Include="OAuth\TokenBase.cs" />
