--- a/F1PCO.Web/Web.config
+++ b/F1PCO.Web/Web.config
@@ -33,14 +33,10 @@
     </mailSettings>
   </system.net>
   <system.web>
-    <sessionState mode="Off" />
-    <!-- 
-            Set compilation debug="true" to insert debugging 
-            symbols into the compiled page. Because this 
-            affects performance, set this value to true only 
-            during development.
-        -->
     <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" encoderType="System.Web.Security.AntiXss.AntiXssEncoder, System.Web, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+    <machineKey compatibilityMode="Framework45" />
+    <sessionState mode="Off" />
     <membership>
       <providers>
         <clear />
@@ -89,7 +85,7 @@
       </staticTypes>
     </httpCompression>
     <directoryBrowse enabled="false" />
-    <modules runAllManagedModulesForAllRequests="true"></modules>
+    <modules runAllManagedModulesForAllRequests="true" />
     <validation validateIntegratedModeConfiguration="true" />
     <urlCompression doStaticCompression="true" />
     <staticContent>
