--- a/F1PCO.Web/packages.config
+++ b/F1PCO.Web/packages.config
@@ -7,7 +7,8 @@
   <package id="AspNetWebApi.Core" version="4.0.20126.16343" />
   <package id="AspNetWebPages.Core" version="2.0.20126.16343" />
   <package id="Autofac" version="2.6.1.841" />
-  <package id="Autofac.Mvc3" version="2.6.1.841" />
+  <package id="Autofac.Mvc4" version="2.6.1.841" />
+  <package id="Autofac.WebApi" version="2.6.1.841" />
   <package id="dotless" version="1.2.4.0" />
   <package id="Hammock" version="1.3.0" />
   <package id="Jurassic" version="2.1.1" />
