--- a/Shared.Mvc/packages.config
+++ b/Shared.Mvc/packages.config
@@ -1,6 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AspNetMvc" version="4.0.20126.16343" />
+  <package id="AspNetRazor.Core" version="2.0.20126.16343" />
+  <package id="AspNetWebApi" version="4.0.20126.16343" />
+  <package id="AspNetWebApi.Core" version="4.0.20126.16343" />
+  <package id="AspNetWebPages.Core" version="2.0.20126.16343" />
   <package id="Autofac" version="2.6.1.841" />
-  <package id="Autofac.Mvc3" version="2.6.1.841" />
-  <package id="Newtonsoft.Json" version="4.5.5" />
+  <package id="Autofac.Mvc4" version="2.6.1.841" />
+  <package id="Autofac.WebApi" version="2.6.1.841" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
+  <package id="Newtonsoft.Json" version="4.0.8" />
+  <package id="System.Net.Http" version="2.0.20126.16343" />
+  <package id="System.Net.Http.Formatting" version="4.0.20126.16343" />
+  <package id="System.Web.Http.Common" version="4.0.20126.16343" />
 </packages>
