--- a/F1PCO/packages.config
+++ b/F1PCO/packages.config
@@ -4,4 +4,6 @@
   <package id="Newtonsoft.Json" version="4.0.8" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="RavenDB.Client" version="1.0.888" />
+  <package id="RestSharp" version="103.0.0" />
+  <package id="System.Net.Http" version="2.0.20126.16343" />
 </packages>
