Trying to hook up async await for F1PersonRepository

--- a/Shared.Mvc/packages.config
+++ b/Shared.Mvc/packages.config
@@ -10,6 +10,7 @@
   <package id="Autofac.WebApi" version="2.6.1.841" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Newtonsoft.Json" version="4.0.8" />
+  <package id="RestSharp" version="103.0.0" />
   <package id="System.Net.Http" version="2.0.20126.16343" />
   <package id="System.Net.Http.Formatting" version="4.0.20126.16343" />
   <package id="System.Web.Http.Common" version="4.0.20126.16343" />
