--- a/Shared/packages.config
+++ b/Shared/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Autofac" version="2.6.1.841" />
   <package id="log4net" version="2.0.0" />
+  <package id="RestSharp" version="103.0.0" />
 </packages>
