Trying to hook up async await for F1PersonRepository - IT WORKED

--- a/F1PCO.Web/Web.config
+++ b/F1PCO.Web/Web.config
@@ -9,6 +9,8 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <appSettings>
+    <!--Remove when MVC 4 is released (http://forums.asp.net/p/1778103/4880898.aspx/1?Re+Using+an+Async+Action+to+Run+Synchronous+Code)-->
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="true" />
     <add key="PreserveLoginUrl" value="true" />
