--- a/Shared.Mvc/Shared.Mvc.csproj
+++ b/Shared.Mvc/Shared.Mvc.csproj
@@ -60,10 +60,20 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Newtonsoft.Json.4.0.8\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NLog">
+      <HintPath>..\packages\NLog.2.0.0.2000\lib\net40\NLog.dll</HintPath>
+    </Reference>
+    <Reference Include="Raven.Abstractions">
+      <HintPath>..\packages\RavenDB.Client.1.0.888\lib\net40\Raven.Abstractions.dll</HintPath>
+    </Reference>
+    <Reference Include="Raven.Client.Lightweight">
+      <HintPath>..\packages\RavenDB.Client.1.0.888\lib\net40\Raven.Client.Lightweight.dll</HintPath>
+    </Reference>
     <Reference Include="RestSharp">
       <HintPath>..\packages\RestSharp.103.0.0\lib\net35\RestSharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -132,6 +142,7 @@
     <Compile Include="ContractCookieExtensions.cs" />
     <Compile Include="JsonNetFormatter.cs" />
     <Compile Include="JsonNetValueProviderFactory.cs" />
+    <Compile Include="Persistence\RavenPersistenceModule.cs" />
     <Compile Include="TimeModule.cs" />
     <Compile Include="SecurityModule.cs" />
     <Compile Include="FlashMessages\FlashMessageDisposition.cs" />
