--- a/F1PCO.Web/packages.config
+++ b/F1PCO.Web/packages.config
@@ -10,9 +10,14 @@
   <package id="Autofac.Mvc4" version="2.6.1.841" />
   <package id="Autofac.WebApi" version="2.6.1.841" />
   <package id="dotless" version="1.2.4.0" />
+  <package id="jQuery" version="1.7.2" />
+  <package id="jQuery.Validation" version="1.9" />
+  <package id="jQuery.Validation.Unobtrusive" version="2.0.20126.16343" />
   <package id="Jurassic" version="2.1.1" />
+  <package id="knockoutjs" version="2.1.0" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" />
   <package id="Microsoft.Web.Optimization" version="1.0.0-beta" />
+  <package id="Modernizr" version="2.5.3" />
   <package id="Newtonsoft.Json" version="4.0.8" />
   <package id="NLog" version="2.0.0.2000" />
   <package id="RavenDB.Client" version="1.0.888" />
