--- a/F1PCO/F1PCO.csproj
+++ b/F1PCO/F1PCO.csproj
@@ -67,9 +67,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="F1Person.cs" />
     <Compile Include="Integration\F1\F1AuthorizationService.cs" />
     <Compile Include="Integration\F1\F1ClientProvider.cs" />
+    <Compile Include="Integration\F1\F1Person.cs" />
     <Compile Include="Integration\F1\F1PersonRepository.cs" />
     <Compile Include="Integration\F1\IF1AuthorizationService.cs" />
     <Compile Include="Integration\F1\IF1ClientProvider.cs" />
@@ -79,11 +79,11 @@
     <Compile Include="Integration\PCO\IPCOPersonRepository.cs" />
     <Compile Include="Integration\PCO\PCOAuthorizationService.cs" />
     <Compile Include="Integration\PCO\PCOClientProvider.cs" />
+    <Compile Include="Integration\PCO\PCOPerson.cs" />
     <Compile Include="Integration\PCO\PCOPersonRepository.cs" />
     <Compile Include="OAuth\AccessToken.cs" />
     <Compile Include="OAuth\RequestToken.cs" />
     <Compile Include="OAuth\TokenBase.cs" />
-    <Compile Include="PCOPerson.cs" />
     <Compile Include="SynchronizedPerson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="User.cs" />
